<resources>
    <string name="app_name">Recipe Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="checkConnection">Check your internet connection</string>
    <string name="version">Version</string>
    <string name="random">Random</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="recipe">Recipe</string>
    <string name="vegan">vegan\n</string>
    <string name="headerInfo">header  info\n</string>
    <string name="hello">Hello</string>
</resources>